[workspace]
resolver = "2"
members = [ "jolt_bevy", "jolt_rust_cpp",
]

[workspace.package]
publish = true
version = "0.1.0"
edition = "2024"
license = "BSD-3"
repository = "https://github.com/lucasw/tc_gbm_vehicle"
authors = [
    "Lucas Walter <wsacul@gmail.com>",
]
keywords = ["robotics", "simulation"]
categories = ["science::robotics"]
