[package]
name = "jolt_rerun"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.100"
jolt_rust_cpp = { version = "0.1.0", path = "../jolt_rust_cpp" }
noise = "0.9.0"
# TODO(lucasw) update to 0.25
rerun = "0.26"
